--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,12 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+chrono = "0.4.41"
 clap = { version = "4.5.39", features = ["derive"] }
+colored = "3.0.0"
+dialoguer = "0.11.0"
+humansize = "2.1.3"
+indicatif = "0.17.11"
+rayon = "1.10.0"
+serde_json = "1.0.140"
+walkdir = "2.5.0"
