[4] (chore on main) Licenses + better readme.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "A fast CLI tool for recursively cleaning Rust target/ and Node.js
 readme = "README.md"
 homepage = "https://github.com/TomPlanche/clean-dev-dirs"
 repository = "https://github.com/TomPlanche/clean-dev-dirs"
-license = "MIT"
+license = "Apache-2.0 OR MIT"
 keywords = ["cli", "cleanup", "rust", "nodejs", "disk-space"]
 categories = ["command-line-utilities", "filesystem"]
 authors = ["Tom Planche <tomplanche@proton.me>"]
