--- a/hooksmith.yaml
+++ b/hooksmith.yaml
@@ -2,6 +2,8 @@ pre-commit:
   commands:
     - cargo fmt --all -- --check
     - cargo clippy --workspace --release --all-targets --all-features -- --deny warnings -D warnings -W clippy::correctness -W clippy::suspicious -W clippy::complexity -W clippy::perf -W clippy::style -W clippy::pedantic
+    - cargo audit
+    - cargo outdated
 
 pre-push:
   commands:
