--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,18 +29,18 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0"
-chrono = "0.4.41"
-clap = { version = "4.5.39", features = ["derive"] }
+chrono = "0.4.42"
+clap = { version = "4.5.49", features = ["derive"] }
 colored = "3.0.0"
-dialoguer = "0.11.0"
 humansize = "2.1.3"
 indicatif = "0.17.11"
-rayon = "1.10.0"
-serde_json = "1.0.140"
+inquire = "0.7"
+rayon = "1.11.0"
+serde_json = "1.0.145"
 walkdir = "2.5.0"
 
 [dev-dependencies]
-tempfile = "3.0"
+tempfile = "3.23"
 
 [build-dependencies]
-hooksmith = "1.11.0"
+hooksmith = "1.15.0"
