--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license = "Apache-2.0 OR MIT"
 name = "clean-dev-dirs"
 readme = "README.md"
 repository = "https://github.com/TomPlanche/clean-dev-dirs"
-version = "2.3.1"
+version = "2.4.0"
 
 [lib]
 name = "clean_dev_dirs"
@@ -32,11 +32,14 @@ anyhow = "1.0"
 chrono = "0.4.43"
 clap = { version = "4.5.58", features = ["derive"] }
 colored = "3.1.1"
+dirs = "6.0.0"
 humansize = "2.1.3"
 indicatif = "0.17.11"
 inquire = "0.7"
 rayon = "1.11.0"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.149"
+toml = "0.8"
 walkdir = "2.5.0"
 
 [dev-dependencies]
