--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license = "Apache-2.0 OR MIT"
 name = "clean-dev-dirs"
 readme = "README.md"
 repository = "https://github.com/TomPlanche/clean-dev-dirs"
-version = "2.4.2"
+version = "2.4.4"
 
 [lib]
 name = "clean_dev_dirs"
@@ -40,6 +40,7 @@ rayon = "1.11.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.149"
 toml = "0.8"
+trash = "5.2.5"
 walkdir = "2.5.0"
 
 [dev-dependencies]
