--- a/hooksmith.yaml
+++ b/hooksmith.yaml
@@ -1,6 +1,6 @@
 pre-commit:
   commands:
-    - cargo fmt --all
+    - cargo fmt --all -- --check
     - cargo clippy --workspace --release --all-targets --all-features -- --deny warnings -D warnings -W clippy::correctness -W clippy::suspicious -W clippy::complexity -W clippy::perf -W clippy::style -W clippy::pedantic -D clippy::nursery
     - cargo audit
     - cargo outdated
